:memo: Update swagger doc
