# docs/swagger.json
@@ -35,8 +35,8 @@
                 "parameters": [
                     {
                         "format": "base64",
-                        "description": "shellcode",
-                        "name": "shellcode",
+                        "description": "the param to generate shellcode runner",
+                        "name": "runner",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -85,14 +85,17 @@
             "type": "object",
             "properties": {
                 "regen": {
+                    "description": "ReGen Whether to regenerate the loader, if true, it will remove cache, this may be beneficial for bypass AV",
                     "type": "boolean",
                     "example": true
                 },
                 "shellcode": {
+                    "description": "Shellcode This is a base64 encoded shellcode",
                     "type": "string",
                     "example": "MTIzemN4"
                 },
                 "x64": {
+                    "description": "X64 Whether the shellcode is x64",
                     "type": "boolean",
                     "example": false
                 }
